# PEP-Ai-Engineering

./: main.py  pyproject.toml
03-Machine-Learning-Fundamentals/: 01-ML-Paradigms-Supervised-Unsupervised-Reinforcement.md
05-Unsupervised-Learning/: 01-Clustering-KMeans-DBSCAN-Hierarchical.md
06-Deep-Learning-Fundamentals/: 01-Neural-Network-Basics-Perceptron-MLP.md
06-Deep-Learning-Fundamentals/Basics/: Introduction To Neural Networks.md
06-Deep-Learning-Fundamentals/notebooks/: RNN_PT.ipynb  cnn.ipynb  nn.ipynb
08-Natural-Language-Processing/: 00-Introduction-to-NLP.md  01-Tokenization-Stemming-Lemmatization.md  02-Text-Representation(Sparse Vectors)-BoW-TF-IDF.md  03-Word-Embeddings(Dense Vectors)-Word2Vec-GloVe-FastText.md
08-Natural-Language-Processing/Notebooks/: 01-tokenization.ipynb  nlp_basics.ipynb
