[project]
name = "pep-ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.15.0",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "tensorflow>=2.21.0",
    "tf-keras>=2.21.0",
    "torch>=2.12.1",
    "tqdm>=4.68.3",
    "wordcloud>=1.9.6",
]
